fix: tipo de arquivo de download

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <div>
-            <a href="https://www.instagram.com/rmuler_" target="_blank"><img src="images/behance.png" alt="Logo do Instagram">Behance</a>
+            <a href="https://www.behance.com/rmuler_" target="_blank"><img src="images/behance.png" alt="Logo do Instagram">Behance</a>
         </div>
 
         <div>
@@ -31,7 +31,7 @@
         </div>
 
         <div>
-            <a href="archives/curriculo.rar" download="curriculo.rar" type="application/zip"><img src="images/curriculo.png" alt="Ícone de download">Baixe meu currículo</a>
+            <a href="archives/curriculo.pdf" download="curriculo.pdf" type="application/pdf"><img src="images/curriculo.png" alt="Ícone de download">Baixe meu currículo</a>
         </div>
     </main>
 
