--- a/index.html
+++ b/index.html
@@ -14,25 +14,27 @@
     </header>
 
     <main>
-        <div>
-            <a href="https://github.com/rmuler" target="_blank"><img src="images/github.png" alt="Logo do Github">Github</a>
-        </div>
+        <section id="links">
+            <article>
+                <a href="https://github.com/rmuler" target="_blank"><img src="images/github.png" alt="Logo do Github">Github</a>
+            </article>
 
-        <div>
-            <a href="https://www.linkedin.com/in/richard-muler/" target="_blank"><img src="images/linkedin.png" alt="Logo do Linkedin">Linkedin</a>
-        </div>
+            <article>
+                <a href="https://www.linkedin.com/in/richard-muler/" target="_blank"><img src="images/linkedin.png" alt="Logo do Linkedin">Linkedin</a>
+            </article>
 
-        <div>
-            <a href="https://www.behance.com/rmuler_" target="_blank"><img src="images/behance.png" alt="Logo do Instagram">Behance</a>
-        </div>
+            <article>
+                <a href="https://www.behance.com/rmuler_" target="_blank"><img src="images/behance.png" alt="Logo do Instagram">Behance</a>
+            </article>
 
-        <div>
-            <a href="https://www.instagram.com/rmuler_" target="_blank"><img src="images/instagram.png" alt="Logo do Instagram">Instagram</a>
-        </div>
+            <article>
+                <a href="https://www.instagram.com/rmuler_" target="_blank"><img src="images/instagram.png" alt="Logo do Instagram">Instagram</a>
+            </article>
 
-        <div>
-            <a href="archives/curriculo.pdf" download="curriculo.pdf" type="application/pdf"><img src="images/curriculo.png" alt="Ícone de download">Baixe meu currículo</a>
-        </div>
+            <article>
+                <a href="archives/curriculo.pdf" download="curriculo.pdf" type="application/pdf"><img src="images/curriculo.png" alt="Ícone de download">Baixe meu currículo</a>
+            </article>
+        </section>
     </main>
 
     <footer>
